<resources>
    <string name="app_name">Github User</string>
    <!--navigation bottom-->
    <string name="home">Home</string>
    <string name="icon_home">Icon Home</string>
    <string name="settings">Settings</string>
    <string name="icon_setting">Icon Setting</string>
    <string name="icon_favorite">Icon Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="icon_following">Icon following</string>
    <string name="icon_followers">Icon Followers</string>
    <string name="icon_repos">Icon Repos</string>
    <string name="icon_star">Icon Star</string>
    <string name="icon_fork">Icon Fork</string>
    <string name="icon_issue">Icon Issue</string>
    <string name="icon_share">Icon share</string>
    <string name="share">Share</string>
    <string name="follow">Follow</string>
    <string name="results">Results</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="icon_company">Icon Company</string>
    <string name="icon_location">Icon Location</string>
    <string name="share_detail_user">"Share %s  "</string>
    <string name="favorite_users">Favorite users</string>
    <!--Themes-->
    <string name="theme_preferences_key">theme_preferences_key</string>
    <string name="light_theme_preference_value">0</string>
    <string name="dark_theme_preference_value">1</string>
    <string name="system_theme_preference_value">2</string>
    <string name="dark_theme_description">Dark mode</string>
    <string name="light_theme_description">Light mode</string>
    <string name="system_theme_description">System default</string>
    <string name="image_splashscreen">Image splashscreen</string>
    <string-array name="theme_list_array">
        <item>Light</item>
        <item>Dark</item>
        <item>System default</item>
    </string-array>

    <string-array name="theme_entry_array">
        <item>@string/light_theme_preference_value</item>
        <item>@string/dark_theme_preference_value</item>
        <item>@string/system_theme_preference_value</item>
    </string-array>

    <!--language-->
    <string name="language_preferences_key">language_preferences_key</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose language</string>
    <string name="theme">Theme</string>
    <string name="choose_theme">Choose theme</string>

    <string name="all_data_loaded">All data loaded</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_results">No results</string>
    <string name="retry">retry</string>
    <string name="search_users">Search username…</string>
    <string name="follow_message">following activity can\'t be done</string>
    <string name="users">users</string>
    <string name="tab_layout">Tab layout</string>
    <string name="success_add_favorite">successfully added to favorites</string>
    <string name="remove_favorite">successfully removed from favorites</string>
    <string name="following_does_not_exist">Following does not exist</string>
    <string name="followers_does_not_exist">Followers does not exist</string>
    <string name="repository_does_not_exist">Repository does not exist</string>
    <string name="image_not_found">Image not found</string>
    <string name="press_again_to_exit">Press again to exit</string>

    <!--reminders-->
    <string name="reminders">Reminders</string>
    <string name="reminders_preferences_key">reminders_preferences_key</string>
    <string name="reminders_category">reminders_category</string>
    <string name="repeating_set_title">Reminder app</string>
    <string name="repeating_set_content">Don\'t forget to find and favorite github users to learn various codes</string>
    <string name="active_daily_reminder">Active daily reminder</string>
    <string name="daily_reminder_off">Daily reminder off</string>
    <string name="app_reminder_at">App reminder at 09.00</string>

    <string name="icon_next_configuration_language">Icon next configuration language</string>
    <string name="image_user_widget">Image user in widget</string>
    <string name="no_data_in_app">No data in app</string>

    <string name="empty_favorite">There is no data that you save as a favorite</string>
</resources>